push 20 march 2nd update

--- a/index.html
+++ b/index.html
@@ -381,12 +381,17 @@
     </section>
 
     <section class="mt-5">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row mb-5">
                 <div class="col heading-sub-banner text-center">
                     <div class="mid-align">
                         <h2> BLOGS | RESEARCH FINDINGS | STUDENTS ACHIVEMENTS</h2>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+
                 </div>
             </div>
         </div>
