--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                                     <div class="modal-dialog  modal-dialog-centered modal-lg">
                                                         <div class="modal-content video-model">
 
-                                                            <iframe src="https://www.youtube.com/embed/jcP5RvUy4OU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                            <!-- <iframe src="https://www.youtube.com/embed/jcP5RvUy4OU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                                             <button type="button" class="close close-video" data-dismiss="modal" aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
                                                           </button>
