--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         </section>
         <!-- // Banner End -->
 
-
         <!-- QUANTIFING CYBER RISK section start -->
         <section class="my-5">
             <div class="container">
@@ -96,7 +95,7 @@
         </section>
         <!-- QUANTIFING CYBER RISK section end -->
 
-
+        <!-- WANT TO KNOW ABOUT US ? section start  -->
         <section class="mt-5">
             <div class="container">
                 <div class="row">
@@ -152,8 +151,9 @@
                 </div>
             </div>
         </section>
+        <!-- WANT TO KNOW ABOUT US ? section end  -->
 
-
+        <!-- VA&PT SERVICES section start  -->
         <section>
             <div class="container">
                 <div class="row">
@@ -195,8 +195,9 @@
                 </div>
             </div>
         </section>
+        <!-- VA&PT SERVICES section end  -->
 
-
+        <!-- Brands That Trust Our Competencies section start  -->
         <section class="my-5 py-5">
             <div class="container">
                 <div class="row">
@@ -218,8 +219,10 @@
                 </div>
             </div>
         </section>
+        <!-- Brands That Trust Our Competencies section end  -->
 
-        <section class="mb-5">
+        <!-- Why choose ICSS section start  -->
+        <section class="pb-3 my-5">
             <div class="container">
                 <div class="row">
                     <div class="col heading-sub-banner text-center">
@@ -303,11 +306,12 @@
                 </div>
             </div>
         </section>
+        <!-- Why choose ICSS section end  -->
 
-
+        <!-- MEDIA COVERAGES start  -->
         <section class="mt-5 pt-5">
             <div class="container">
-                <div class="row mb-5">
+                <div class="row mb-3">
                     <div class="col heading-sub-banner text-center">
                         <div class="mid-align">
                             <h2>MEDIA COVERAGES</h2>
@@ -347,12 +351,12 @@
                 </div>
             </div>
         </section>
+        <!-- MEDIA COVERAGES end  -->
 
-
-
+        <!-- Workshops & Training Sessions Conducted by ICSS start  -->
         <section class="mt-5 pt-5">
             <div class="container-fluid">
-                <div class="row mb-5">
+                <div class="row mb-2">
                     <div class="col heading-sub-banner text-center">
                         <div class="mid-align">
                             <h2>Workshops & Training Sessions Conducted by ICSS</h2>
@@ -379,7 +383,9 @@
                 </div>
             </div>
         </section>
+        <!-- Workshops & Training Sessions Conducted by ICSS end  -->
 
+        <!-- BLOGS start  -->
         <section class="my-5">
             <div class="container">
                 <div class="row mb-3">
@@ -437,7 +443,9 @@
                 </div>
             </div>
         </section>
+        <!-- BLOGS end  -->
 
+        <!-- CERTIFIED COMPANY logo start -->
         <section class="mb-5">
             <div class="container">
                 <div class="main-fetured-item">
@@ -468,7 +476,100 @@
                 <!-- main-fetured-item end -->
             </div>
         </section>
+        <!-- CERTIFIED COMPANY logo end -->
+
+        <!-- Office address start  -->
+        <section class="mt-5 pt-5">
+            <div class="container">
+                <div class="row mb-3">
+                    <div class="col heading-sub-banner text-center">
+                        <div class="mid-align">
+                            <h2> OUR OFFICE LOCATION </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="warp-style">
+                            <card class="card-style">
+                                <tag>
+                                    KOLKATA
+                                </tag>
+                                Globsyn Crystals Building,5th Floor, Unit-4, Webel MoreKolkata – 700091
+                            </card>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="warp-style">
+                            <card class="card-style">
+                                <tag>
+                                    BANGALORE
+                                </tag>
+                                Chirush Mansion, 3478J HAL 2nd Stage,13th A Main Road Indiranagar Bangalore – 560008 Land Mark: Behind New Horizon School
+                            </card>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="warp-style">
+                            <card class="card-style">
+                                <tag>
+                                    CANADA
+                                </tag>
+                                Indian Cyber Security Solutions Cyber Security Research & Analytics Center Vine Avenue Moncton NB,Canada, PO E1E 1J9
+                            </card>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="warp-style">
+                            <card class="card-style">
+                                <tag>
+                                    AUSTRALIA
+                                </tag>
+                                Indian Cyber Security Solutions Australia (Research and Development Center)11 Darling Street, Hughesdale Melbourne VIC. 3166
+                            </card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Office address End  -->
+
     </div>
+
+
+    <!-- Footer start  -->
+    <footer class="footer-sec">
+        <div class="container">
+            <div class="row text-center">
+
+                <div class="col-md-12 col-md-offset-2 col-xs-12">
+                    <div class="sub_title">
+                        <a href="#"><span>Home</span> </a>
+                        <a href="#"><span>About Us</span></a>
+                        <a href="#"><span>Contact Us</span> </a>
+                        <a href="#"><span>Site Maps</span> </a>
+                        <a href="#"><span>Privacy Policy</span> </a>
+                    </div>
+                    <ul class="banner_social_link">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+
+                    <p class="w-text">CopyRight ©
+                        <script>
+                            document.write(new Date().getFullYear())
+                        </script> Indian Cyber Security Solutions | Green Fellow IT Security Solutions Pvt. Ltd. | All Rights Reserved</p>
+                </div>
+                <!-- END COL -->
+            </div>
+            <!--- END ROW -->
+        </div>
+        <!--- END CONTAINER -->
+    </footer>
+    <!-- Footer end -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
