--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <!-- // hamburger menu start -->
     <div class="main-nav-bar">
-        <div class="call-button">
+        <!-- <div class="call-button">
             <a class="cta-button" href="tel: 1800123500014">Call Us @ Toll-Free</a>
-        </div>
+        </div> -->
         <nav class="sidebar" id="sidebar">
             <div class="sidebar__btn-close" id="sidebarBtnClose">&times</div>
         </nav>
@@ -39,12 +39,18 @@
                 <div class=" demo">
                     <div class="content">
                         <div id="large-header" class="large-header">
-                            <div class="marquee-text">
+                            <!-- <div class="marquee-text">
                                 <marquee>
                                     <h5>Indian Cyber Security Solutions | A unit of Green Fellow IT Security Solutions Pvt Ltd | Member of NASSCOM, DSCI, ICC | ATC of EC- Council </h5>
                                 </marquee>
+                            </div> -->
+                            <div class="heder-title">
+                                <h5>Indian Cyber Security Solutions | A unit of Green Fellow IT Security Solutions Pvt Ltd | Member of NASSCOM, DSCI, ICC | ATC of EC- Council</h5>
+                                <h5>Call Us @ Toll-Free - 1800-123-500014 | +91- 9831318312 | 8972107846</h5>
+                                <h5>E-mail - info@indiancybersecuritysolutions.com</h5>
                             </div>
                             <canvas id="demo-canvas"></canvas>
+
                             <div class="main-title">
                                 <div class="reveal">
                                     <img class="animate__animated animate__fadeIn" src="source/images/icss-logo.jpg" alt="INDIAN CYBER SECURITY SOLUTIONS">
