--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Indian Cyber Security Solutions | Best Cyber Security Company | VAPT Service - ICSS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
@@ -14,58 +15,59 @@
     <link rel="stylesheet" href="source/css/style.css">
 </head>
 
-<body>
-    <!-- // hamburger menu start -->
-    <div class="main-nav-bar">
-        <!-- <div class="call-button">
-            <a class="cta-button" href="tel: 1800123500014">Call Us @ Toll-Free</a>
-        </div> -->
-        <nav class="sidebar" id="sidebar">
-            <div class="sidebar__btn-close" id="sidebarBtnClose">&times</div>
-        </nav>
-        <div class="sidebar-overlay"></div>
-        <button class="btn-menu" id="sidebarBtnOpen">
-            <label for="burger__input" class="burger__label">
-                <i class="fa fa-fw fa-bars" aria-hidden="true"></i>
-                <span class="burger__linelabel">
-                </span>
-            </label>
-        </button>
-    </div>
-    <!-- // hamburger menu End -->
+<body class="icss">
     <div id="particles-js">
-        <!-- // Banner start  -->
-        <section class="banner-head">
-            <div class="banner-group">
-                <div class=" demo">
-                    <div class="content">
-                        <div id="large-header" class="large-header">
-                            <!-- <div class="marquee-text">
-                                <marquee>
-                                    <h5>Indian Cyber Security Solutions | A unit of Green Fellow IT Security Solutions Pvt Ltd | Member of NASSCOM, DSCI, ICC | ATC of EC- Council </h5>
-                                </marquee>
-                            </div> -->
-                            <div class="heder-title">
-                                <h5>Indian Cyber Security Solutions | A unit of Green Fellow IT Security Solutions Pvt Ltd | Member of NASSCOM, DSCI, ICC | ATC of EC- Council</h5>
-                                <h5>Call Us @ Toll-Free - 1800-123-500014 | +91- 9831318312 | 8972107846</h5>
-                                <h5>E-mail - info@indiancybersecuritysolutions.com</h5>
-                            </div>
-                            <canvas id="demo-canvas"></canvas>
-
-                            <div class="main-title">
-                                <div class="reveal">
-                                    <img class="animate__animated animate__fadeIn" src="source/images/icss-logo.jpg" alt="INDIAN CYBER SECURITY SOLUTIONS">
-                                    <h1 class="animate__animated animate__fadeInUpBig">INDIAN CYBER SECURITY SOLUTIONS</h1>
-                                    <h5 class="animate__animated animate__fadeInUp animate__delay-1s">SECURING YOUR WORLD DIGITALLY</h5>
-                                </div>
-                            </div>
+        <main class="main main--icss">
+            <div class="content content--icss">
+                <div class="hamburger hamburger--icss js-hover" onclick="myFunction()">
+                    <div class="hamburger__line hamburger__line--01">
+                        <div class="hamburger__line-in hamburger__line-in--01"></div>
+                    </div>
+                    <div class="hamburger__line hamburger__line--02">
+                        <div class="hamburger__line-in hamburger__line-in--02"></div>
+                    </div>
+                    <div class="hamburger__line hamburger__line--03">
+                        <div class="hamburger__line-in hamburger__line-in--03"></div>
+                    </div>
+                    <div class="hamburger__line hamburger__line--cross01">
+                        <div class="hamburger__line-in hamburger__line-in--cross01"></div>
+                    </div>
+                    <div class="hamburger__line hamburger__line--cross02">
+                        <div class="hamburger__line-in hamburger__line-in--cross02"></div>
+                    </div>
+                </div>
+                <div id="fixed-content">
+                    <div class="global-menu">
+                        <div class="global-menu__wrap">
+                            <a class="global-menu__item global-menu__item--icss" href="#">Home</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Security Products</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Clients</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Services</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">ICSS Academy | Courses</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Student Placement Records</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Media Coverage</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Students Feedbacks</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Apply for Campus Representative</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Campus Representatives Hall-of-Fame</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Company</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Career</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Contact Us</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Apply for Franchise</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Services - Location</a>
+                            <a class="global-menu__item global-menu__item--icss" href="#">Education-Location</a>
                         </div>
                     </div>
                 </div>
+                <svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
+					<path class="shape-overlays__path"></path>
+					<path class="shape-overlays__path"></path>
+					<path class="shape-overlays__path"></path>
+				</svg>
             </div>
-        </section>
-        <!-- // Banner End -->
+        </main>
+        <!-- // hamburger menu two start -->
 
+        <div class="demo-title demo-title--icss banner-head" style="color: #fff;">Artificial Intelligence</div>
         <!-- QUANTIFING CYBER RISK section start -->
         <section class="my-5">
             <div class="container">
@@ -585,12 +587,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js "></script>
     <script type="text/javascript " src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js "></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js "></script>
-    <script src='source/js/TweenLite.min.js'></script>
-    <script src='source/js/EasePack.min.js'></script>
+    <!-- <script src='source/js/TweenLite.min.js'></script>
+    <script src='source/js/EasePack.min.js'></script> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js "></script>
     <script>
         AOS.init();
     </script>
+    <script src="source/js/menu.js "></script>
     <script src="source/js/custom.js "></script>
 </body>
 
