--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="particles-js">
         <main class="main main--icss">
             <div class="content content--icss">
-                <div class="hamburger hamburger--icss js-hover" onclick="myFunction()">
+                <div class="hamburger hamburger--icss js-hover">
                     <div class="hamburger__line hamburger__line--01">
                         <div class="hamburger__line-in hamburger__line-in--01"></div>
                     </div>
