--- a/index.html
+++ b/index.html
@@ -490,6 +490,16 @@
         </section>
         <!-- CERTIFIED COMPANY logo end -->
 
+        <section>
+            <div class="container-fluid mt-5 pt-5">
+                <div class="row mt-4">
+                    <div class="col">
+                        <script defer async src='https://cdn.trustindex.io/loader.js?57da868221112778c351c6c703'></script>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Office address start  -->
         <section class="mt-5 pt-5 ">
             <div class="container ">
