24 Apr part one

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <button type="button" class="close video-close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <iframe src="https://www.youtube.com/embed/jcP5RvUy4OU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="model-video" src="https://www.youtube.com/embed/jcP5RvUy4OU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     </div>
                 </div>
@@ -492,7 +492,7 @@
         </section>
         <!-- CERTIFIED COMPANY logo end -->
 
-        <section>
+        <!-- <section>
             <div class="container-fluid mt-5 pt-5">
                 <div class="row mt-4">
                     <div class="col">
@@ -500,7 +500,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Office address start  -->
         <section class="mt-5 pt-5 ">
