--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 heading-sub-banner text-justify">
-                        <h2 class="pt-5 my-4 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">VA&PT SERVICES</h2>
+                        <h2 class="pt-5 my-4 reduce-headinggaap aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">VA&PT SERVICES</h2>
                         <p class="aos-init aos-animate" data-aos="zoom-in">Indian Cyber Security Solutions team of penetration testers have worked on various industries starting from manufacturing to banking and have secured applications and networks on various platforms. Cyber security being the top
                             priority for all organizations in 2021, ICSS had been the first choice for enterprises who are looking for an effective penetration testing service to test there IT infrastructure. Vulnerability Assessment & Penetration Testing
                             conducted by the experts aims at understanding the security posture of the organization and rates the vulnerabilities on the level of criticalities.
                         </p>
                     </div>
-                    <div class="col-md-6 mt-5">
-                        <div class="row pt-5 my-4">
+                    <div class="col-md-6 mt-5 neon-no-bob_gapping">
+                        <div class="row pt-5 my-4 neon-no-bob_gapping">
                             <div class="col-md-6">
                                 <div class="counter-style aos-init aos-animate" data-aos="fade-up" data-aos-anchor-placement="center-center">
                                     <h3>474</h3>
@@ -209,7 +209,7 @@
         <!-- VA&PT SERVICES section end  -->
 
         <!-- Brands That Trust Our Competencies section start  -->
-        <section class="my-5 py-5">
+        <section class="my-5 py-5 neon-no-bob_gapping-two">
             <div class="container">
                 <div class="row">
                     <div class="col heading-sub-banner text-center">
@@ -236,12 +236,12 @@
         <!-- Brands That Trust Our Competencies section end  -->
 
         <!-- Why choose ICSS section start  -->
-        <section class="pb-3 my-5">
+        <section class="pb-3 my-5 neon-no-bob_gapping-two">
             <div class="container">
                 <div class="row">
                     <div class="col heading-sub-banner text-center">
                         <div class="mid-align">
-                            <h2 class="pt-5 my-4 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Why choose ICSS</h2>
+                            <h2 class="pt-5 my-4 neon-no-bob_gapping-three aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Why choose ICSS</h2>
                             <p class="aos-init aos-animate" data-aos="zoom-in">Indian Cyber Security Solutions focuses on providing in-depth practical training to students on various technologies which are closely aligned with cyber security. ICSS provides a range of training starting from Cyber Security
                                 ( Ethical Hacking ) to Cloud computing and programming languages like Python to technologies like IOT. Learning from working professionals does make the difference which is evident from our placement records.
                             </p>
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row my-5">
+                <div class="row my-5 gradint-card">
                     <div class="col-md-4">
                         <div class="widget-container one-right  aos-init aos-animate" data-aos="zoom-out-right">
                             <div class="image-box-wrapper box-content-alag">
